# smart-process-mapper

./: .gitignore  README.md  README_TR.md  download_model.py  draw_process_map.py  example_input.txt  process_map.html  process_parser.py  pyproject.toml  requirements.txt  semantic_step_extractor.py  setup.sh  start_ui.bat  start_ui.sh
scripts/: build_zip.sh
ui/: app.py
