[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-process-mapper"
version = "0.1.0"
description = "Simple tools for parsing Turkish process text and drawing maps."
authors = [{name = "Smart Process Mapper"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "spacy>=3.4.2,<3.5.0",
    "graphviz>=0.19",
    "streamlit",
    "pyvis",
]

[project.scripts]
smart-process-parse = "process_parser:parse_and_save"
smart-step-extract = "semantic_step_extractor:main"
draw-process-map = "draw_process_map:main"
