[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-process-mapper"
version = "0.1.0"
description = "Simple tools for parsing Turkish process text and drawing maps."
authors = [{name = "Smart Process Mapper"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.11"
dependencies = [
    "spacy==3.4.2",
    "numpy==1.23.5",
    "thinc==8.1.10",
    "graphviz>=0.19",
    "streamlit==1.28.2",
    "matplotlib",
    "pyvis",
    "transformers>=4.30.0",
]

[project.scripts]
smart-process-parse = "process_parser:parse_and_save"
smart-step-extract = "semantic_step_extractor:main"
draw-process-map = "draw_process_map:main"

[tool.setuptools]
py-modules = [
    "process_parser",
    "semantic_step_extractor",
    "draw_process_map",
]
packages = []
